# Gemma4_ComfyUI

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  colab.ipynb  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
data/n8n/: config  database.sqlite  database.sqlite-shm  database.sqlite-wal
data/workflows/: gemma4_uncensored_art.json
docker/: Dockerfile.comfyui  docker-compose.cpu.yml  local_comfyUI.ipynb
docs/: open-webui-comfyui-setup.md
experiments/: Advanced_VRAM_6GB_Optimized.json  comfyui_api_example.py  gemma4_comfy_api.py  local_comfyUI.ipynb  mobile_api.py
scripts/: Gemma4_Comfy_Expert.Modelfile  backup_config.sh  cleanup_data.sh  download_models.sh  fix_nvidia_docker.sh  ngrok_share.py  setup_tailscale.sh  start_comfyui.sh  update_custom_nodes.sh
src/: dashboard.py
